# react-native-kos-nitro

./: .gitignore  .npmignore  Cargo.toml  KosNitro.podspec  LICENSE  README.md  build_android.sh  build_ios.sh  nitro.json  package.json
.github/workflows/: android-build.yml  ios-build.yml  rust-and-nitro.yml
android/: CMakeLists.txt  build.gradle  gradle.properties
android/src/main/cpp/: cpp-adapter.cpp
android/src/main/java/com/kosnitro/: KosNitroPackage.kt
cpp/: HybridKosNitro.cpp  HybridKosNitro.hpp  KosNitroJson.hpp
example/: App.tsx  metro.config.js  package-lock.json  package.json
example/__tests__/: App.test.tsx  KosNitro.test.tsx
example/ios/example.xcodeproj/: project.pbxproj
ios/: Bridge.h
rust/kos-nitro/: Cargo.toml  build.sh  build_android.sh  build_ios.sh
rust/kos-nitro/include/: kos_nitro.h
rust/kos-nitro/src/: c_abi.rs  lib.rs
scripts/: fetch-binaries.js
src/: index.ts
src/specs/: kos-nitro.nitro.ts
