[package]
name = "kos-nitro"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
kos = { workspace = true, default-features = false }
kos-codec = { workspace = true, default-features = false }
kos-mobile = { workspace = true, default-features = false }

hex = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
